fixed hamburgerBtn on mobile

--- a/styles/base.css
+++ b/styles/base.css
@@ -19,7 +19,6 @@
   font-family: var(--paragraph-font);
   font-weight: bold;
   letter-spacing: 0.09rem;
-
 }
 
 h1,
@@ -36,11 +35,11 @@ h2 {
 .header-grid {
   background-color: var(--nav-background-color);
   display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: repeat(3 1fr);
 }
 
 nav {
-  grid-column: 1/4;
+      grid-column: 1/4;
   text-align: center;
 }
 
@@ -68,12 +67,15 @@ nav ul {
 }
 
 #hamburgerBtn {
-  margin: 2rem 2vw;
   background: transparent;
   border: 1px solid RGBA(0, 0, 0, 0.5);
   font-size: 2.5rem;
   color: var(--secondary-color);
-  grid-column: 3/4;
+
+}
+.hamburgerBtn{
+  grid-column: 1/4;
+  justify-self: center;
 }
 
 nav ul {
@@ -108,14 +110,21 @@ nav ul.open {
 }
 
 .social-logo {
-  border-radius: 30px;
-  width: 40px;
+
+  width: 55px;
   padding: 0.5em;
   height: auto;
 }
 .social {
+  grid-column: 3/4;
   place-self: center;
 }
+.header-img-div{
+  grid-column: 1/3;
+    /* place-self: center; */
+}
+
+
 
 .basic-grid h1,
 .home-grid h1 {
